added 5easysteps page, updated index

--- a/5easysteps.html
+++ b/5easysteps.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Anxious to Download</title>
+    <title>How to Make Yourself Into A Commissioning Body in Five Easy Steps: The Workbook</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='Our Downloads'>
-    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist as entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist as curator, artist as commissioner, on-demand economy, collaborative consumption, collaborative economy, gig-economy'>
+    <meta name='description' content='How to Make Yourself Into A Commissioning Body in Five Easy Steps: The Workbook'>
+    <meta name='keywords' content='how to, instructions, commissioning'>
     
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -17,17 +17,17 @@
         .title {
             display: block;
             text-align: center;
-            font-size: 4em;
+            font-size: 2em;
             font-family: sans-serif;
             font-weight: bold;
             padding: 0;
             margin-bottom: 50px;
             color: #FF0179;
         }
-        .download {
+        .document {
             margin-bottom: 10px;
         }  
-        .download span{
+        .document span{
             font-family: sans-serif;
             font-weight: bold;
             font-size: 1em;
@@ -35,19 +35,19 @@
             text-align: center;
             display: block;
         }  
-        .download a,
-        .download a:visited {
+        .document a,
+        .document a:visited {
           color: black;
           text-decoration: none;
         }
-        .download a:hover {
+        .document a:hover {
           color: #FF0179;
           text-decoration: none;
         }
-        .download img {
+        .document img {
           border: 2px solid #000;
         }
-        .download img:hover {
+        .document img:hover {
           border: 2px solid #FF0179;
         }
         @media screen and (max-width: 768px) {
@@ -65,22 +65,17 @@
 
     <div class="container">
         <div class="row">
-          <h1 class="title">Our Downloads</h1>
-          <div class="col-xs-12 col-sm-4 col-md-4 download">
-            <a href="5easysteps.html">
+          <h1 class="title">How to Make Yourself Into A Commissioning Body in 5 Easy Steps</h1>
+          <div class="col-xs-6 col-sm-6 col-sm-offset-1 document">
+            <a href="media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf">
             <img src="img/download-makeyourself.jpg" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook"></a>
-            <span>How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook</span>
+            <span>Workbook</span>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 download">
-            <a href="media/RitualsForRemovingCreativeBlocks.pdf" target="_blank">
-            <img src="img/download-rituals.jpg" class="img-responsive" alt="Rituals For Removing Creative Blocks"></a>
-            <span>Rituals for Removing Creative Blocks</span>
+          <div class="col-xs-3 col-sm-3 document">
+            <a href="media/scantron.pdf">
+            <img src="img/download-scantron.png" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Scantron"></a>
+            <span>Scantron</span>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 download">
-            <a href="media/ContractForAudienceOfOne.pdf">
-            <img src="img/download-contract.jpg" class="img-responsive" alt="Contract for Audience of One"></a>
-            <span>Contract for Audience of One</span>
-          </div>  
         </div>
     </div>
 
