--- a/moneyquiz.html
+++ b/moneyquiz.html
@@ -113,7 +113,7 @@
 
             <div id="slide-1" class="ci-slide">
                 <h2>Would money be all that I need to succeed?</h2>
-                <p>Love money? Want money? Fear money? Don't worry, we can help!</p>
+                <p>Want money? Fear money? Hate money? Don't worry, we can help!</p>
                 <button class="ci-nav smallbutton" path="slide-2">Take the Quiz!</button>
             </div>
 
@@ -324,7 +324,7 @@
 
             <div id="slide-34" class="ci-slide">
                 <h2>Oh no, what happened?</h2>
-                <button class="ci-nav" path="slide-35">Too much sex. Like, I'm not supposed to have a body, with urges? I didn't ask to be born?!</button>
+                <button class="ci-nav" path="slide-35">Too much sex. Like, I'm not supposed to have a body? I didn't ask to be born?!</button>
                 <button class="ci-nav" path="slide-35">They think I'm going to end up in prison. It's not easy trying to bring down governments with internet memes and elaborate art interventions.</button>
                 <button class="ci-nav" path="slide-35">Art is life. i.e. I share way too much personal information. They think it reflects poorly on them. Holiday gatherings are the worst.</button>
                 <button class="ci-nav prev" path="slide-31"></button>
@@ -630,7 +630,7 @@
 
             <!--NEVER ENOUGH 1 (entrepreneurial dream)-->
             <div id="slide-8" class="ci-slide">
-            <h2>Great! Then you are probably already an expert at branding, publicity, outsourcing, etc.</h2>   
+            <h2>Great! An Expert.</h2>   
                 <p>Our work here is done. You may close your Internet browser and go home.</p>
                 <button class="ci-nav prev" path="slide-4"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
@@ -642,7 +642,7 @@
                 <button class="ci-nav" path="slide-75">Yes, like a heart attack.</button>
                 <button class="ci-nav" path="slide-76">No, devastatingly. A spiritual death.</button>
                 <!-- <button class="ci-nav" path="slide-77">Only if the suicide net "fails".</button> -->
-                <button class="ci-nav" path="slide-78">No, I mean not being able-bodied enough to work for the duration of my lifetime, while at the same time having no other resources with which to sustain my disabled or aging body's existence.</button>
+                <button class="ci-nav" path="slide-78">No &ndash; I mean not being able-bodied enough to work for the duration of my lifetime. I mean, not having any other resources or support with which to sustain my disabled or aging body's existence. I mean, death from exhaustion.</button>
                 <button class="ci-nav prev" path="slide-4"></button>
             </div>
 
@@ -700,7 +700,7 @@
             <!--NEVER ENOUGH 3 (lotto)-->
             <div id="slide-10" class="ci-slide">
                 <h2>Here you go.</h2>
-                <a href="http://mysteryprize.biz" target="_blank"><img src="http://mysteryprize.biz/img/gift.gif"><br/><br/></a>
+                <a href="sweepstakes.html" target="_blank"><img src="img/sweepstakes-mystery.gif"><br/><br/></a>
                 <button class="ci-nav prev" path="slide-4"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
