--- a/quizzes.html
+++ b/quizzes.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Anxious to Quiz</title>
+    <title>Quizzes and Surveys</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='Anxious to Make: Quizzes'>
-    <meta name='keywords' content='quizes'>
+    <meta name='description' content='Anxious to Make: Quizzes and Surveys'>
+    <meta name='keywords' content='quizes, surveys'>
     
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -62,10 +62,14 @@
 
     <div class="container">
         <div class="row">
-          <h1 class="title">Our Quizzes</h1>
-          <div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 document">
+          <h1 class="title">Our Quizzes and Surveys</h1>
+          <div class="col-xs-6 col-sm-4 col-sm-offset-2 document">
             <a href="moneyquiz.html">
-            <img src="img/quiz.jpg" class="img-responsive" alt="Project Generator"><span>Would Money Be All I Really Need to Succeed?</span></a>
+            <img src="img/quiz.jpg" class="img-responsive" alt="Would Money Be All I Really Need to Succeed?"><span>Would Money Be All I Really Need to Succeed?</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 document">
+            <a href="makingyou.html">
+            <img src="img/quiz.jpg" class="img-responsive" alt="Important Research: Making You"><span>Important Research: <em>Making You</em> Survey</span></a>
           </div>
         </div>
     </div>
