--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@Resonator11" />
     <meta name="twitter:title" content="Anxious to Make Sweepstakes!">
-    <meta name="twitter:description" content="You're a winner! You're a winner! You're a winner! You're a winner! You're a winner!">
+    <meta name="twitter:description" content="Prizes! Prizes! Prizes! Prizes! Prizes! Prizes! Prizes!">
     <meta name="twitter:creator" content="@Resonator11">
     <!-- Twitter Summary card images must be at least 120x120px -->
     <meta name="twitter:image" content="http://anxioustomake.ga/img/sweepstakes-mystery.gif">
@@ -118,12 +118,12 @@
        <a href="#!" class="closePopUpOutSide"></a>    
     </aside>
 
-    <!-- FORM ENTER SWEEPSTAKES -->
+    <!-- ENTER SWEEPSTAKES FORM -->
  
     <form id ="gform" onsubmit="return checkForm(this);" method="POST" action="https://script.google.com/macros/s/AKfycbw4Z_E4l_0sxgG6n5FDDQ-R7dGOWX8nHlDlSHxwpjovtRLSRqnT/exec">    
       <input name="name" type="text" class="feedback-input" placeholder="Name" required/>   
       <input name="email" type="email" class="feedback-input" placeholder="Email" required/>
-      <input type="checkbox" id="terms" name="terms" />
+      <input name="terms" type="checkbox" id="terms" />
       <label for="terms"><span></span>I agree to the <a href="#terms-and-conditions" id="openpopup">terms and conditions.</a></label>
       <input type="submit" value="ENTER TO WIN!"/>
     </form>
@@ -158,7 +158,7 @@
       </div>
     </div>
 
-
+    <!--JS-->
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/seeThru.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
