added modernizr fb/twitter meta tags new bio

--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
-    <meta name='description' content='Collaboration by Liat Berdugo and Emily Martinez about the sharing economy.'>
+    <meta name='description' content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generations, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).'>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Anxious to Make" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg" />
+    <meta property="og:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.' /> 
+    <meta property="og:site_name" content="Anxious to Make" />
+    <meta property="fb:admins" content="753667636" />
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+    <meta name="twitter:site" content="@Resonator11" />
+    <meta name="twitter:title" content="Anxious to Make">
+    <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
+    <meta name="twitter:creator" content="@Resonator11">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
+
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
@@ -41,12 +60,18 @@
         <a href="#!" class="closePopUp">X</a>
         <h2>We are two commissioning bodies</h2>
        </header>
-      <article>
-        <p><b>Liat Berdugo</b> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
-<!--          liat's new comment-->
-        <p><b>Emily Martinez</b> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
+      <article class="modal-text">
+        <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generations, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
 
-        <p><b>Contact: </b><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate">anxioustomake[at]gmail[dot]com</a></p>
+        <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
+
+        <br/><hr>
+
+        <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
+
+        <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
+
+        
       </article>
    </div>        
    <a href="#!" class="closePopUpOutSide"></a>    
@@ -54,7 +79,7 @@
 
 <div class="anxiouscontainer">
  
-  <div class="welcome">anxious to make is making...</div>
+  <div class="welcome"><img class="img-responsive "src="img/anxious-logo-www.png"></div>
 
 <!--   <div id="card2" class="card draggable center critical-texts">
     Texts<br/><br/>
@@ -115,10 +140,8 @@
   </div>
 
   
-
-
   <div id="card14" class="card draggable center">
-    Quizzes<br/><br/>
+    Quizzes &amp; Surveys<br/><br/>
     <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
   </div>
 
@@ -145,6 +168,8 @@
   <div id="card9" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>04.2016</strong> <em>Can't Someone Else Do It?</em>,<br/><a href="http://www.ybca.org/introducing-our-creative-ecosystem" target="_blank">"Art &amp; Labor Think Tank: Field of Inquiry"</a>, Yerba Buena Center for the Arts, San Francisco, CA
+      <br/><br/>
       <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://temporaryartreview.com/document-v/" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
       <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
@@ -170,7 +195,6 @@
   </div>
 
   
-
   <div class="marquee">
       <marquee>
         Are you stressed? Overwhelmed by unfulfilled desires? Wishing you had just a little more "me time"? 
