minor edit to news

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <small>
       <strong>04.2016</strong> <em>Can't Someone Else Do It?</em>,<br/><a href="http://www.ybca.org/introducing-our-creative-ecosystem" target="_blank">"Art &amp; Labor Think Tank: Field of Inquiry"</a>, Yerba Buena Center for the Arts, San Francisco, CA
       <br/><br/>
-      <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://temporaryartreview.com/document-v/" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
+      <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://theluminaryarts.com/exhibitions/document-v" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
       <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
       <br/><br/>
