updated index, added store

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2>We are two commissioning bodies</h2>
        </header>
       <article class="modal-text">
-        <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generations, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
+        <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
 
         <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
 
@@ -99,47 +99,46 @@
 
 
   <div id="card1" class="card draggable center">
-    <em>Making You</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.</small>
-  </div>
-
-  <div id="card2" class="card draggable center">
     <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
   </div>
 
-  <div id="card3" class="card draggable center">
+  <div id="card2" class="card draggable center">
     <em>Confidence Generator</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card4" class="card draggable center">
+  <div id="card3" class="card draggable center">
     <em>Externalize Distrust</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/153587609?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card5" class="card draggable center rituals">
+  <div id="card4" class="card draggable center rituals">
     <em>Rituals for Removing</em><br/>Creative Blocks<br/><br/>
     <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
   </div>
 
-  <div id="card6" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
+  <div id="card5" class="card draggable center">
     <em>Making Others</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/153431203?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card6" class="card draggable center">
+    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
   <div id="card7" class="card draggable center">
     <img class="new" src="img/new.gif"/>
-    <em>Liat + Emily<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
+    <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, testimonials</small>
   </div>
-
   
+
   <div id="card14" class="card draggable center">
     Quizzes &amp; Surveys<br/><br/>
     <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
@@ -160,14 +159,11 @@
     <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
   </div>
 
-  <div id="card10" class="card draggable center">
-    Store<br/><br/><br/>
-    <a href="mugruggenerator.html"><img class="img-responsive" src="img/store.jpg"></a>
-  </div>
-
-  <div id="card9" class="card draggable news">
+  <div id="card10" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>05.2016</strong> <em>Making You</em>, <a href="https://www.facebook.com/events/1597218800596638/" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, werkärtz, Los Angeles, CA
+      <br/><br/>
       <strong>04.2016</strong> <em>Can't Someone Else Do It?</em>,<br/><a href="http://www.ybca.org/introducing-our-creative-ecosystem" target="_blank">"Art &amp; Labor Think Tank: Field of Inquiry"</a>, Yerba Buena Center for the Arts, San Francisco, CA
       <br/><br/>
       <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://theluminaryarts.com/exhibitions/document-v" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
@@ -186,15 +182,22 @@
     </small>    
   </div>
 
-  <div id="card8" class="card draggable center sweepstakes">
+  <div id="card9" class="card draggable center sweepstakes">
     <img class="new" src="img/new.gif"/>
     Sweepstakes<br/><br/><br/><br/>
-    <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-mvp.jpg"></a>
+    <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-trophy2.gif"></a>
     <br/><br/>
     <small>Enter to Win!</small>
   </div>
 
+  <div id="card8" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    Store<br/><br/><br/>
+    <a href="https://squareup.com/store/anxious-to-make/" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
+    <small></small>
+  </div>
   
+
   <div class="marquee">
       <marquee>
         Are you stressed? Overwhelmed by unfulfilled desires? Wishing you had just a little more "me time"? 
