--- a/store.html
+++ b/store.html
@@ -27,12 +27,14 @@
     <meta name="twitter:creator" content="@Resonator11">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/store-pillow.jpg">
 
+
     <!-- CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/dash.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <style>button.dnl-btn-toggle{top:inherit; bottom:0; right:0;}</style>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/dash.css">
+    <link rel="stylesheet" href="css/csshake.min.css">
+    <link rel="stylesheet" href="css/app.css">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elemdnts and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -40,10 +42,24 @@
     <![endif]-->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <script type="text/javascript" src="js/analytics.js"></script>
+    
+
 </head>
 <body>
 
@@ -73,11 +89,8 @@
     </header>
     <article class="modal-text">
       <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
-
       <br/><hr>
-
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
-
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
   </div>        
@@ -92,11 +105,9 @@
   <span class="fa fa-bars"></span>
 </button>
 
-<!-- Dash Navbar Left 
-Available versions: dnl-visible, dnl-hidden -->
+<!-- Dash Navbar Left -->
 <div class="dash-navbar-left dnl-hidden">
-  <!-- <img class ="img-responsive anx-icon" src="img/anxious-icon.gif"> -->
-  <img class ="img-responsive anx-logo" src="img/anxious-logo-magenta.png">
+  <a href="/"><img class ="img-responsive anx-logo" src="img/anxious-logo-bubblegum.png"></a>
   <div class="clearfix"></div>
   <p class="dnl-nav-title">Work</p>
   <ul class="dnl-nav">
@@ -168,7 +179,7 @@ Available versions: dnl-visible, dnl-hidden -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
           <a href="performativeremoval.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Removal of Creative Block</span>
           </a>
         </li>
@@ -180,37 +191,37 @@ Available versions: dnl-visible, dnl-hidden -->
         </li>
         <li>
           <a href="unfamiliarmaterials.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
           </a>
         </li>
         <li>
           <a href="forecasting.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
           </a>
         </li>
         <li>
           <a href="externalizedistrust.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performance to Externalize Distrust</span>
           </a>
         </li>
         <li>
           <a href="hypnosis.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Hypnosis to Engender Trust</span>
           </a>
         </li>
         <li>
           <a href="twins.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
           </a>
         </li>
         <li>
           <a href="timemanagement.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Custom Audio Track for Motivation</span>
           </a>
         </li>
@@ -306,9 +317,162 @@ Available versions: dnl-visible, dnl-hidden -->
   </ul>      
 </div><!-- /.dash-navbar-left -->
 <!--END: NAVIGATION-->
+<!--START: HELLO -->
+<a href="/"><div id="info"><img src="img/anxious-icon.gif"/></div></a>
+<!--END: HELLO -->
 
-<iframe src="https://squareup.com/store/anxious-to-make/" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+<!-- START: MARQUEE -->
+<div class="anxious-marquee">
+  <marquee>
+  Are you stressed? Overwhelmed by unfulfilled desires? Wishing you had just a little more "me time"? 
+  Well, now is your opportunity. Learn how you can harness the power of the sharing economy to make yourself in just five easy steps. 
+  Don't know what you need for you? Don't worry, we've got you covered. Our algorithm will generate solutions for over one hundred common anxieties about yourself, such as: 
+  How to make yourself auto tuned.
+  How to make yourself better.
+  How to make yourself bleed.
+  How to make yourself blind.  
+  How to make yourself a better singer.
+  How to make yourself a brand.
+  How to make yourself cry.
+  How to make yourself come.
+  How to make yourself a corporation.
+  How to make yourself a celebrity.
+  How to make yourself a demon.
+  How to make yourself a Disney princess.
+  How to make yourself dream.
+  How to make yourself dizzy.
+  How to make yourself disappear.
+  How to make yourself depressed.
+  How to make yourself eat more.
+  How to make yourself eat less.
+  How to make yourself emotionally strong.
+  How to make yourself emotionless.
+  How to make yourself fall asleep.
+  How to make yourself feel better.
+  How to make yourself faint.
+  How to make yourself float in air.
+  How to make yourself feel full.
+  How to make yourself go into labor.
+  How to make yourself grow.
+  How to make yourself go to sleep.
+  How to make yourself a genius.
+  How to make yourself a ghost.
+  How to make yourself get hard.
+  How to make yourself get in the mood.
+  How to make yourself get more energy.
+  How to make yourself get nightmares.
+  How to make yourself get over a guy.
+  How to make yourself get out of bed to workout.
+  How to make yourself get rid of stuff.
+  How to make yourself a heavier sleeper.
+  How to make yourself happy.
+  How to make yourself hungry.
+  How to make yourself have a fever.
+  How to make yourself have visions.
+  How to make yourself happy again.
+  How to make yourself invisible.
+  How to make yourself infertile.
+  How to make yourself in MindCraft.
+  How to make yourself interesting.
+  How to make yourself jump higher for volleyball.
+  How to make yourself judgement proof.
+  How to make yourself keep running.
+  How to make yourself known on Instagram.
+  How to make yourself known as an artist.
+  How to make yourself known on the Internet.
+  How to make yourself known as a babysitter.
+  How to make yourself a lighter sleeper.
+  How to make yourself a lighter skin tone.
+  How to make yourself love.
+  How to make yourself look older.
+  How to make yourself look sick. 
+  How to make yourself look skinny.
+  How to make yourself look taller.
+  How to make yourself look airbrushed.
+  How to make yourself last longer.
+  How to make yourself moan.
+  How to make yourself more awake.
+  How to make yourself more flexible.
+  How to make yourself more fertile.
+  How to make yourself more sick.
+  How to make yourself a morning person.
+  How to make yourself a model.
+  How to make yourself a new person.
+  How to make yourself a nickname.
+  How to make yourself a network administrator.
+  How to make yourself not tired.
+  How to make yourself not hungry.
+  How to make yourself not eat.
+  How to make yourself not throw up.
+  How to make yourself not cry.
+  How to make yourself not get your period.
+  How to make yourself over.
+  How to make yourself offline on Facebook.
+  How to make yourself organism.
+  How to make yourself orgasm.
+  How to make yourself organized.
+  How to make yourself pass out.
+  How to make yourself pee.
+  How to make yourself puke.
+  How to make yourself prettier.
+  How to make yourself a priority.
+  How to make yourself a public figure on Facebook.
+  How to make yourself a private user on Instagram.
+  How to make yourself quicker.
+  How to make yourself quiet.
+  How to make yourself quit smoking.
+  How to make yourself quit coughing.
+  How to make yourself a real mermaid.
+  How to make yourself really wet.
+  How to make yourself really tired.
+  How to make yourself really sick.
+  How to make yourself relax.
+  How to make yourself a robot.
+  How to make yourself run a fever.
+  How to make yourself sleepy.
+  How to make yourself sick.
+  How to make yourself smarter.
+  How to make yourself stop crying.
+  How to make yourself see auras.
+  How to make yourself sound Australian.
+  How to make yourself a super hero.
+  How to make yourself a sudoer.
+  How to make yourself tired.
+  How to make yourself taller.
+  How to make yourself tighter.
+  How to make yourself a twin.
+  How to make yourself a tumblr girl.
+  How to make yourself a twin in a video.
+  How to make yourself unsearchable on Facebook.
+  How to make yourself unsearchable on Facebook 2015.
+  How to make yourself ugly.
+  How to make yourself vomit.
+  How to make yourself vulnerable.
+  How to make yourself visible on Airdrop.
+  How to make yourself a vampire.
+  How to make yourself a virgin again.
+  How to make yourself a witch.
+  How to make yourself a weapon.
+  How to make yourself a Wikipedia page.
+  How to make yourself wet.
+  How to make yourself wake up.
+  How to make yourself younger.
+  How to make yourself Youtube famous.
+  How to make yourself a zombie. 
+  How to make yourself zone out.
+  Find out how to make yourself these things and more on our website.
+  </marquee>
+</div>
+<!-- END: MARQUEE -->
 
+
+<!--START: MAIN CONTENT-->
+<div class="main-content">
+<iframe src="https://squareup.com/store/anxious-to-make/" style="border: 0; position:absolute; top:38px; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+</div>
+<!--END: MAIN CONTENT-->
+
+<!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
