updated subcategory pages, added future of work, making you, tar commissions, updated nav

--- a/nevertalkaboutyourworkagain.html
+++ b/nevertalkaboutyourworkagain.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elemdnts and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
@@ -71,9 +71,8 @@
       <h2>Contact Us</h2>
     </header>
     <article class="modal-text">
-
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
-
+      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> | <i class="fa fa-vimeo"></i><a href="https://vimeo.com/anxioustomake" target="_blank"> Vimeo</a></span></p>
     </article>
   </div>        
   <a href="#!" class="closePopUpOutSide"></a>    
@@ -178,6 +177,30 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="futureofwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
+          </a>
+        </li>
+        <li>
+          <a href="temporaryartreview.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
+          </a>
+        </li>
+        <li>
+          <a href="makingyoumakingothers.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Making You, Making Others</span>
+          </a>
+        </li>
+        <li>
+          <a href="twins.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+          </a>
+        </li>
+        <li>
           <a href="performativeremoval.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Removal of Creative Block</span>
@@ -211,12 +234,6 @@
           <a href="hypnosis.html">
             <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
           </a>
         </li>
         <li>
@@ -482,10 +499,12 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Never talk about your work again</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>This artwork is about the sharing economy
                 </p>
-            </div>   
+            </div>  
+            </div> 
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
         </div>
 
