--- a/unfamiliarmaterials.html
+++ b/unfamiliarmaterials.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elemdnts and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
@@ -71,9 +71,8 @@
       <h2>Contact Us</h2>
     </header>
     <article class="modal-text">
-
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
-
+      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> | <i class="fa fa-vimeo"></i><a href="https://vimeo.com/anxioustomake" target="_blank"> Vimeo</a></span></p>
     </article>
   </div>        
   <a href="#!" class="closePopUpOutSide"></a>    
@@ -178,6 +177,30 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="futureofwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
+          </a>
+        </li>
+        <li>
+          <a href="temporaryartreview.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
+          </a>
+        </li>
+        <li>
+          <a href="makingyoumakingothers.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Making You, Making Others</span>
+          </a>
+        </li>
+        <li>
+          <a href="twins.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+          </a>
+        </li>
+        <li>
           <a href="performativeremoval.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Removal of Creative Block</span>
@@ -211,12 +234,6 @@
           <a href="hypnosis.html">
             <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
           </a>
         </li>
         <li>
@@ -481,6 +498,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Are you working with unfamiliar materials?</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>Hey. I’ve got to talk to you. Man-to-man. Man-to-person. Because I heard you’re working with unfamiliar materials.
                 <br/><br/>
@@ -489,7 +507,8 @@
                 This iron, though -- I understand it now. This iron and me get along. It’s like the iron and I are one body. Some people say that ironing is a fantastic upper-body workout, but they’re missing the point. Me and this iron – we *are* *one* body. 
                 <br/><br/>
                 Anyway, look. I was once a young boy with crinkled shirts. Irons were unfamiliar materials to me. But now they’re not. I’m telling you this because it can be your story, too. You can do this. Whatever your unfamiliar material is -- it can become a part of you.</p>
-            </div>   
+            </div> 
+            </div>  
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/saavfabb/say-anything-you-want-in-a-video-while-ironing" target="_blank">I will say Anything You Want While Ironing In A HD Video, In Italian, English, Spanish</a></p>
         </div>
 
