--- a/forecasting.html
+++ b/forecasting.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/csshake.min.css">
     <link rel="stylesheet" href="css/app.css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elemdnts and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
@@ -71,9 +71,8 @@
       <h2>Contact Us</h2>
     </header>
     <article class="modal-text">
-
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
-
+      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> | <i class="fa fa-vimeo"></i><a href="https://vimeo.com/anxioustomake" target="_blank"> Vimeo</a></span></p>
     </article>
   </div>        
   <a href="#!" class="closePopUpOutSide"></a>    
@@ -178,6 +177,30 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="futureofwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
+          </a>
+        </li>
+        <li>
+          <a href="temporaryartreview.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
+          </a>
+        </li>
+        <li>
+          <a href="makingyoumakingothers.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Making You, Making Others</span>
+          </a>
+        </li>
+        <li>
+          <a href="twins.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+          </a>
+        </li>
+        <li>
           <a href="performativeremoval.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Removal of Creative Block</span>
@@ -211,12 +234,6 @@
           <a href="hypnosis.html">
             <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
           </a>
         </li>
         <li>
@@ -482,14 +499,17 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title"><strong>Future Proof Your Career</strong></p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
             <p class="script">LETTER TO THE PSYCHIC<br/><br/>
             Hello Psychicthe,<br/><br/>  
-            I'm an artist. I have some concerns about my career. I'm worried that my art practice has failed to keep pace with the demands of the rapidly shifting forces that shape the economy. I've lost faith in the markets and institutions that support artists &mdash; they are being dismantled and compromised in ways that make me believe that continuing to pursue an art career any further (I've been doing this for 20 years) is crazy and unsustainable. At the same time, I can't stop doing this &mdash; making art &mdash; I don't know what to do.
+            I'm an artist. I have some concerns about my career.
+            <br/><br/>
+            I'm worried that my art practice has failed to keep pace with the demands of the rapidly shifting forces that shape the economy. I've lost faith in the markets and institutions that support artists. In the private sphere, I don't have the stuff that auction houses and top tier commercial galleries dream of. And elsewhere it seems that most public or non profit institutions are either being dismantled or compromised in ways that make me believe that continuing to pursue an art career any further (I've been doing this for 20 years) is crazy and unsustainable. At the same time, I can't stop doing this &mdash; making art &mdash; I don't know what to do.
             <br/> <br/> 
-            I feel overwhelmed by this problem of sustainability, of becoming too vulnerable in the face of so many changes, especially as I get older. 
+            I just feel overwhelmed by this problem of sustainability, of becoming too vulnerable in the face of so many changes, especially as I get older. 
             <br/> <br/> 
-            So, I have been wondering. . . should I change or diversify my practice? In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game, ahead of volatile economic markets, without compromising my integrity?
+            I have been wondering if I should change or diversify my practice? In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game without compromising my integrity?
             <br/> <br/> 
             My intuition tells me that cultivating better forecasting abilities about these unpredictable changes, both internal and external to me, would be of tremendous value. 
             <br/> <br/> 
@@ -498,6 +518,7 @@
             Warmly,<br/> 
             Emily</p>
             </div>   
+            </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/psychicthe/provide-a-truthful-answer-to-your-question" target="_blank">I will provide a truthful audio answer to your question</a></p>
         </div>
 
@@ -513,15 +534,15 @@
         <div class="col-xs-12 col-sm-8 col-md-8">
             <h1 class="title">Make Your Own</h1>
             <div class="row">     
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/delaweiss/give-you-an-intuitive-psychic-reading" target="_blank">I will give you a specific intuitive psychic reading</a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/akashicsoul/do-a-psychic-reading-and-answer-one-question-with-detail" target="_blank">I will do a psychic reading and answer one question with detail</a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/indianastro/prepare-career-astrology-report-and-persosnlaity-test" target="_blank">I will prepare career astrology report and personality test</a>
                 </div>
