minor edits to nav and tar page

--- a/brandgenerator.html
+++ b/brandgenerator.html
@@ -181,7 +181,7 @@
         </li>
         <li>
           <a href="temporaryartreview.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="fa fa-chrome dnl-link-icon"></span>
             <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
           </a>
         </li>
