--- a/temporaryartreview.html
+++ b/temporaryartreview.html
@@ -183,7 +183,7 @@
         </li>
         <li>
           <a href="temporaryartreview.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="fa fa-chrome dnl-link-icon"></span>
             <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
           </a>
         </li>
@@ -484,7 +484,7 @@
 
 <!--START: MAIN CONTENT-->
 <div class="main-content">
-  <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; top:40px; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+  <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </div>
 <!--END: MAIN CONTENT-->
 
